<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="hello">Hello World, EasyLauncher!</string>
	<string name="app_name">EasyLauncher</string>
	<string name="activity_not_found">Application is not installed on your phone.
	</string>
	<string name="out_of_space">No more room on this Home screen.</string>
	<string name="menu_add">Add</string>
	<string name="menu_wallpaper">Wallpaper</string>
	<string name="chooser_wallpaper">Wallpapers</string>
	<!-- All applications label for accessibilty (spoken when the button gets 
		focus). -->
	<string name="all_apps_button_label">All applications</string>

	<!-- Permissions: -->
	<skip />
	<!-- Permission short label -->
	<string name="permlab_install_shortcut">install shortcuts</string>
	<!-- Permission description -->
	<string name="permdesc_install_shortcut">Allows an application to add
		shortcuts without user
		intervention.</string>
	<!-- Permission short label -->
	<string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
	<!-- Permission description -->
	<string name="permdesc_uninstall_shortcut">Allows an application to remove
		shortcuts without
		user intervention.</string>
	<!-- Permission short label -->
	<string name="permlab_read_settings">read Home settings and shortcuts</string>
	<!-- Permission description -->
	<string name="permdesc_read_settings">Allows an application to read the settings and
		shortcuts in Home.</string>
	<!-- Permission short label -->
	<string name="permlab_write_settings">write Home settings and shortcuts</string>
	<!-- Permission description -->
	<string name="permdesc_write_settings">Allows an application to change the settings and
		shortcuts in Home.</string>

	<string name="vodvideo_widget_name">视频点播</string>
	<string name="vodvideo_widget_deftime">00:00:00</string>
	<string name="vodvideo_widget_defvideo">"video"</string>
	<string name="vodvideo_widget_decript">"没有描述信息"</string>
	<string name="vodvideo_widget_flash">"刷新"</string>
	<string name="vodvideo_widget_try_again">"可以再试试"</string>

	<string name="tvlive_widget_name">电视直播</string>
	<string name="tvlive_widget_isplaying">正在播放:</string>
	<string name="monday">星期一</string>
	<string name="tuesday">星期二</string>
	<string name="wednesday">星期三</string>
	<string name="thursday">星期四</string>
	<string name="friday">星期五</string>
	<string name="saturday">星期六</string>
	<string name="sunday">星期日</string>
	<string name="noprogram">当天没有节目表</string>
	<string name="tvlive_play">播放</string>
	<string name="tvlive_programlist">节目表</string>
	
	<string name="strInputAccHint">只能是数字和字母</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="str_confirm_pwd">确认</string>
    <string name="str_nickname">昵称</string>
    <string name="str_confirm">确定</string>
    <string name="str_Cancel">取消</string>
    <string name="opt_savepwd">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_autoLogin">自动登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_register">注册</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string> 
 	<string name="login_wait">请等待...</string>
 	<string name="login_register">正在为您注册...</string>
 	<string name="login_logining">正在为您登录...</string>
 	<string name="login_quiting">正在为您退出...</string>
 	<string name="login_reg_suc">注册成功</string>
 	<string name="login_reg_fail">注册失败</string>
 	<string name="login_have_reg">已被注册</string>
 	<string name="login_login_suc">登录成功</string>
 	<string name="login_login_fail">登录失败</string>
 	<string name="login_quit_safely">安全退出</string>
 	<string name="login_input_error">输入有误</string>
 	
 	
 	
	<string name="news_widget_name">新闻资讯</string>
	
	<string name="weather_widget_city">北京</string>
	<string name="weather_widget_temp">20℃</string>
	<string name="weather_pop_change_city">切换城市</string>
	<string name="weather_pop_histroy">历史记录</string>
	<string name="weather_pop_hotcity">热门城市</string>
	<string name="weather_pop_inputcity">键入城市名或拼音</string>
	<string name="weather_back">返回</string>
	<string name="weather_noresult">没有符合的搜索结果</string>
	<string name="weather_cancel">取消</string>
</resources>
