<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:background="#b0000000"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="300dip" android:layout_height="400dip"
		android:layout_gravity="center"
		android:background="@drawable/register">
		<RelativeLayout android:id="@+id/RelativeLayout"
			android:paddingTop="20.0px"
			android:paddingBottom="10.0px" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="15.0px"
			android:layout_marginTop="30.0px" android:layout_marginRight="15.0px">
			
			<TextView android:id="@+id/register_title"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5.0dip"
 				android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0px" 
				android:maxLength="10" android:text="@string/opt_register"
				android:textSize="25sp" android:textStyle="bold"
			    android:textColor="#FFFFFFFF" android:gravity="center"
				android:layout_alignParentTop="true" android:background="#00000000"/>
			<EditText android:id="@+id/reg_edit_account"
				android:background="@drawable/qq_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5.0dip"
				android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip"
				android:layout_marginBottom="5.0px" android:hint="@string/strInputAccHint"
				android:maxLength="10" android:layout_below="@+id/register_title"
				android:layout_alignLeft="@+id/register_title"
				android:layout_alignRight="@+id/register_title"
				android:digits="@string/register_name_digits" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/reg_edit_account"
				android:layout_alignTop="@+id/reg_edit_account"
				android:layout_alignBottom="@+id/reg_edit_account" />
			<EditText android:id="@+id/reg_edit_pwd"
				android:background="@drawable/qq_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/reg_edit_account"
				android:layout_alignLeft="@+id/reg_edit_account"
				android:layout_alignRight="@+id/reg_edit_account"
				android:digits="@string/register_name_digits"/>
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/reg_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/reg_edit_pwd" />
				
			<EditText android:id="@+id/reg_confirm_pwd"
				android:background="@drawable/qq_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/reg_edit_pwd"
				android:layout_alignLeft="@+id/reg_edit_pwd"
				android:layout_alignRight="@+id/reg_edit_pwd"
				android:digits="@string/register_name_digits" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView03"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/str_confirm_pwd"
				android:layout_alignTop="@+id/reg_confirm_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/reg_confirm_pwd" />
				
<!--  			<EditText android:id="@+id/nickname"
				android:background="@drawable/qq_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/reg_confirm_pwd"
				android:layout_alignLeft="@+id/reg_confirm_pwd"
				android:layout_alignRight="@+id/reg_confirm_pwd"
				 />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView04"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/str_nickname"
				android:layout_alignTop="@+id/nickname"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/nickname" />
-->				
			<Button 
				android:id="@+id/reg_btn_ok" android:text="@string/str_confirm" 
				android:layout_alignLeft="@+id/reg_edit_account"   android:layout_width="120.0px" 
				android:layout_height="50.0px"  android:layout_marginTop="27.0px"
				android:layout_below="@+id/TextView03"
				android:background="@drawable/login_denglu_button"
				/>
			<Button android:id="@+id/reg_btn_cancel" android:layout_width="120.0px"
				android:layout_height="50.0px" android:layout_marginTop="27.0px"
				android:layout_alignRight="@+id/reg_edit_account" android:text="@string/str_Cancel"
				android:layout_below="@+id/TextView03"
				
				android:background="@drawable/login_denglu_button"/>
		</RelativeLayout>
	</LinearLayout>
</FrameLayout>