<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:background="#b0000000"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="300dip" android:layout_height="400dip"
		android:layout_gravity="center"
		android:background="@drawable/bg01">
		<RelativeLayout android:id="@+id/RelativeLayout02"
			android:paddingTop="21.0px"
			android:paddingBottom="10.0px" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="15.0px"
			android:layout_marginTop="62.0px" android:layout_marginRight="15.0px">
			<EditText android:id="@+id/login_edit_account"
				android:background="@drawable/qq_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5.0dip"
				android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip"
				android:layout_marginBottom="5.0px" android:hint="@string/strInputAccHint"
				android:maxLength="10" 
				android:layout_alignParentTop="true" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			<ImageButton android:id="@+id/ImageButton02"
				android:background="@drawable/more_select" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			<EditText android:id="@+id/login_edit_pwd"
				android:background="@drawable/qq_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/login_edit_account"
				android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				 />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />
			<Button 
				android:id="@+id/login_cb_savepwd" android:text="@string/opt_register" 
				android:layout_alignLeft="@+id/login_edit_account"   android:layout_width="120.0px" 
				android:layout_height="42.0px"  android:layout_marginTop="27.0px"
				android:layout_below="@+id/TextView02" 
				android:background="@drawable/login_denglu_button"
				/>
			<Button android:id="@+id/login_btn_login" android:layout_width="120.0px"
				android:layout_height="42.0px" android:layout_marginTop="27.0px"
				android:layout_alignRight="@+id/login_edit_account" android:text="@string/login"
				android:layout_below="@+id/TextView02"
				
				android:background="@drawable/login_denglu_button"/>
		</RelativeLayout>
		<TableLayout android:id="@+id/TableLayout01"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="20.0px" android:layout_marginRight="20.0px"
			android:stretchColumns="1">
			<TableRow>
				<CheckBox android:textColor="#7fffffff" android:id="@+id/login_cb_visible"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/opt_autoLogin" style="@style/MyCheckBox" />
				<CheckBox android:textColor="#7fffffff"
					android:layout_gravity="right" android:id="@+id/login_cb_openvibra"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/opt_remember" style="@style/MyCheckBox" />
			</TableRow>
			
		</TableLayout>
	</LinearLayout><!--
	<RelativeLayout android:id="@+id/RelativeLayout01"
		android:background="@drawable/bottom" android:layout_width="fill_parent"
		android:layout_height="44.0dip">
		<ImageButton android:id="@+id/login_option"
			android:background="@drawable/option" android:clickable="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip"
			android:layout_centerVertical="true" />
	</RelativeLayout>
--></FrameLayout>